<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_users"
        android:orderInCategory="100"
        android:title="@string/action_add_users"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_get_users"
        android:orderInCategory="100"
        android:title="@string/action_get_users"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_dialog_name"
        android:orderInCategory="100"
        android:title="@string/action_get_users"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send_photo"
        android:orderInCategory="100"
        android:title="@string/action_send_photo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send_image"
        android:orderInCategory="100"
        android:title="@string/action_send_image"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_chat"
        android:orderInCategory="100"
        android:title="@string/action_delete_chat"
        app:showAsAction="never" />

</menu>
